csv/ add dao interfaces